--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "mysql2": "^3.6.4",
     "sweetalert2": "^11.10.0"
   }
 }
