--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.9.4",
-    "nuxt": "^3.8.1",
-    "tailwindcss-image-rendering": "^1.0.2",
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
+    "eslint": "^8.54.0",
+    "nuxt": "^3.8.1"
   },
   "dependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@prisma/client": "^5.6.0",
     "dotenv": "^16.3.1",
-    "mysql2": "^3.6.4",
-    "sweetalert2": "^11.10.0"
+    "sweetalert2": "^11.10.0",
+    "typescript": "^5.3.2"
   }
 }
