--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.9.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.5",
     "eslint": "^8.54.0",
     "nuxt": "^3.8.1"
   },
   "dependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@prisma/client": "^5.6.0",
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "sweetalert2": "^11.10.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
