--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -2,5 +2,8 @@
     "root": true,
     "extends": [
       "@nuxtjs/eslint-config-typescript"
-    ]
+    ],
+    "rules": {
+      "no-console": "off"
+    }
   }
